--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="css/style.css">
-
     <title>Ristorante Con Fusion</title>
 </head>
 
 <body>
-<nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+<nav class="navbar navbar-expand-sm fixed-top">
     <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
             <span class="navbar-toggler-icon"></span>
@@ -30,10 +29,126 @@
                 <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                 <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
             </ul>
+            <span class="navbar-text">
+					<a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in"></span> Login</a>
+				</span>
         </div>
     </div>
 </nav>
+<!-- Login Modal -->
+<div id="loginModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg" role="content">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Login </h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                        <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="exampleInputPassword3">Password</label>
+                        <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                    </div>
+                    <div class="form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox"> Remember me
+                        </label>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-primary btn-sm">Sign in</button>
+            </div>
+        </div>
+    </div>
+</div>
 
+<!-- Reserve Modal Form -->
+<div id="reserveModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg" role="content">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Reserve a Table</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form id="reserveModalForm">
+                    <div class="form-group row align-items-center">
+                        <label class="col-12 col-sm-2 col-form-label">Number of Guest</label>
+                        <div class="form-check form-check-inline col-12 col-sm">
+                            <label class="form-check-label">
+                                <input type="radio" class="form-check-input" id="numberofguest1" name="numberofguest" value="1"> 1
+                            </label>
+                            <label class="form-check-label">
+                                <input type="radio" class="form-check-input" id="numberofguest2" name="numberofguest" value="2"> 2
+                            </label>
+                            <label class="form-check-label">
+                                <input type="radio" class="form-check-input" id="numberofguest3" name="numberofguest" value="2"> 3
+                            </label>
+                            <label class="form-check-label">
+                                <input type="radio" class="form-check-input" id="numberofguest4" name="numberofguest" value="2"> 4
+                            </label>
+                            <label class="form-check-label">
+                                <input type="radio" class="form-check-input" id="numberofguest5" name="numberofguest" value="2"> 5
+                            </label>
+                            <label class="form-check-label">
+                                <input type="radio" class="form-check-input" id="numberofguest6" name="numberofguest" value="2"> 6
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group row align-items-center">
+                        <label class="col-12 col-sm-2 col-form-label">Section</label>
+                        <div class="col-12 col-sm">
+                            <div class="btn-group" data-toggle="buttons">
+                                <label class="btn btn-success btn-sm active">
+                                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-smoking
+                                </label>
+                                <label class="btn btn-danger btn-sm">
+                                    <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row align-items-center">
+                        <label class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                        <div class="col-12 col-sm-5">
+                            <div class="input-group">
+                                <i class="input-group-addon" aria-hidden="true"></i>
+                                <input type="text" class="form-control" id="date" name="date">
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-5">
+                            <div class="input-group">
+                                <i class="input-group-addon" aria-hidden="true"></i>
+                                <input type="text" class="form-control" id="time" name="time">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="offset-sm-2 col-md-10">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-primary btn-sm">Sign in</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Jumbotron -->
 <header class="jumbotron">
     <div class="container">
         <div class="row row-header">
@@ -45,13 +160,72 @@
                 <img src="img/logo.png" class="img-fluid">
             </div>
             <div class="col-12 col-sm align-self-center">
-                <a class="btn btn-warning btn-block btn-sm" href="#reservetable" role="button">Reserve a Table</a>
+                <a type="button" class="btn btn-warning btn-sm btn-block" role="button"
+                   data-toggle="modal" data-target="#reserveModal" title="Or Call us at +852 12345678">Reserve a Table</a>
             </div>
         </div>
     </div>
 </header>
 
 <div class="container">
+    <div class="row row-content">
+        <div class="col">
+            <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
+                            <p class="d-none d-sm-block">
+                                A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="img/buffet.png" alt="Buffet">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Weekend Grand Buffet <span class="badge badge-danger">HOT</span></h2>
+                            <p class="d-none d-sm-block">
+                                Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
+                            <p class="d-none d-sm-block">
+                                A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="img/buffet.png" alt="Buffet">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Weekend Grand Buffet <span class="badge badge-danger">HOT</span></h2>
+                            <p class="d-none d-sm-block">
+                                Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <ol class="carousel-indicators">
+                    <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#mycarousel" data-slide-to="1"></li>
+                    <li data-target="#mycarousel" data-slide-to="2"></li>
+                    <li data-target="#mycarousel" data-slide-to="3"></li>
+                </ol>
+                <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Our Lipsmacking Culinary Creations -->
     <div class="row row-content align-items-center">
         <div class="col-sm-4 col-md-3 flex-last">
             <h3>Our Lipsmacking Culinary Creations</h3>
@@ -61,15 +235,15 @@
                 <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
                 <div class="media-body">
                     <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
-                    <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
-                        Italian pizza, topped with Cerignola olives, ripe vine
-                        cherry tomatoes, Vidalia onion, Guntur chillies and
-                        Buffalo Paneer.</p>
+                    <p class="d-none d-sm-block">
+                        A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- This Month's Promotions -->
     <div class="row row-content align-items-center">
         <div class="col-sm-4 col-md-3">
             <h3>This Month's Promotions</h3>
@@ -79,24 +253,27 @@
                 <img class="d-flex mr-3 img-thumbnail align-self-center flex-last" src="img/buffet.png" alt="Buffet">
                 <div class="media-body flex-first">
                     <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">HOT</span></h2>
-                    <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person.</p>
+                    <p class="d-none d-sm-block">
+                        Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Meet our Culinary Specialists -->
     <div class="row row-content align-items-center">
         <div class="col-sm-4 col-md-3 flex-last">
             <h3>Meet our Culinary Specialists</h3>
         </div>
         <div class="col-sm col-md flex-first">
             <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center"
-                     src="img/alberto.png" alt="Alberto Somayya">
+                <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="Alberto Somayya">
                 <div class="media-body">
                     <h2 class="mt-0">Alberto Somayya</h2>
                     <h4>Executive Chef</h4>
-                    <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                    <p class="d-none d-sm-block">
+                        Award winning three-star Michelin chef with wide
                         International experience having worked closely with
                         whos-who in the culinary world, he specializes in
                         creating mouthwatering Indo-Italian fusion experiences.
@@ -106,60 +283,6 @@
         </div>
     </div>
 
-    <div class="row row-content justify-content-center">
-        <div class="col col-sm-8 align-self-center">
-            <div class="card">
-                <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                <div class="card-body">
-                    <form id="reservetable">
-                        <div class="form-group row align-items-center">
-                            <label class="col-12 col-sm-2 col-form-label">Number of Guest</label>
-                            <div class="form-check form-check-inline col-12 col-sm">
-                                <label class="form-check-label">
-                                    <input type="radio" class="form-check-input" id="numberofguest1" name="numberofguest" value="1"> 1
-                                </label>
-                                <label class="form-check-label">
-                                    <input type="radio" class="form-check-input" id="numberofguest2" name="numberofguest" value="2"> 2
-                                </label>
-                                <label class="form-check-label">
-                                    <input type="radio" class="form-check-input" id="numberofguest3" name="numberofguest" value="2"> 3
-                                </label>
-                                <label class="form-check-label">
-                                    <input type="radio" class="form-check-input" id="numberofguest4" name="numberofguest" value="2"> 4
-                                </label>
-                                <label class="form-check-label">
-                                    <input type="radio" class="form-check-input" id="numberofguest5" name="numberofguest" value="2"> 5
-                                </label>
-                                <label class="form-check-label">
-                                    <input type="radio" class="form-check-input" id="numberofguest6" name="numberofguest" value="2"> 6
-                                </label>
-                            </div>
-                        </div>
-                        <div class="form-group row align-items-center">
-                            <label class="col-12 col-sm-2 col-form-label">Date and Time</label>
-                            <div class="col-12 col-sm-5">
-                                <div class="input-group">
-                                    <i class="input-group-addon " aria-hidden="true"></i>
-                                    <input type="text" class="form-control" id="date" name="date" placeholder="date">
-                                </div>
-                            </div>
-                            <div class="col-12 col-sm-5">
-                                <div class="input-group">
-                                    <i class="input-group-addon " aria-hidden="true"></i>
-                                    <input type="text" class="form-control" id="time" name="time" placeholder="time">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="offset-sm-2 col-md-10">
-                                <button type="submit" class="btn btn-primary">Reserve</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 <footer class="footer">
